change font color

--- a/base.css
+++ b/base.css
@@ -3,6 +3,6 @@ body {
     font-size:95%;
     font-family: "ＭＳ ゴシック",sans-serif;
     line-height:1.5;
-    /*color:#545454;*/
-    color:#aaaaaa;
+    /*color:#aaaaaa;*/
+    color:#545454;
 }
