--- a/base.css
+++ b/base.css
@@ -4,5 +4,5 @@ body {
      font-family: "ＭＳ ゴシック",sans-serif;
        line-height:1.5;
       /*color:#aaaaaa;*/
-      color:#0000ff;
+      color:#2b2b31;
 }
