--- a/base.css
+++ b/base.css
@@ -1,7 +1,7 @@
 @charset "utf-8";
 body {
       font-size:95%;                            /* フォントサイズを95%にする */
-      font-family: "Yu Gothic Medium", "游ゴシック Medium", YuGothic, "游ゴシック体", "ヒラギノ角ゴ Pro W3", "メイリオ", sans-serif;    /* フォントの種類をゴシック系にする */
+      font-family: /*"Yu Gothic Medium",*/ "Yu Gothic", "游ゴシック Medium", YuGothic, "游ゴシック体", "ヒラギノ角ゴ Pro W3", "メイリオ", sans-serif;    /* フォントをゴシック系にする */
       line-height:1.5;                         /* 行の高さを1.5倍にする */
       color:#2b2b31;                          /* 文字色を任意の色にする */
 }
