--- a/base.css
+++ b/base.css
@@ -5,7 +5,20 @@ body {
       line-height:1.5;                         /* 行の高さを1.5倍にする */
       color:#2b2b31;                          /* 文字色を任意の色にする */
 }
+
+/*============================================
+メインメニュー
+============================================*/
+ul#menu {
+	width:960px; height:50px; 	/*メインメニュー部分の幅と高さ*/
+}
+
 #menu li {
 	list-style-type:none;	/*リストマーカー無しにする*/
 	display:inline;		/*リスト項目をインライン表示にする*/
+}
+
+#menu li a {
+	display:block;			/*リンク部分をブロック表示にする*/
+	width:240px; height:35px;	/*幅と高さ*/
 }
