--- a/base.css
+++ b/base.css
@@ -20,6 +20,8 @@ ul#menu {
 }
 
 #menu li a {
+      background-color:rgb(32, 32, 32);	/*背景色*/
+	color:#c7c7c7;		/*文字色*/
 	display:block;			/*リンク部分をブロック表示にする*/
 	width:240px; height:35px;	/*幅と高さ*/
 }
