pagebody color change

--- a/base.css
+++ b/base.css
@@ -7,6 +7,10 @@ body {
       color:#2b2b31;                          /* 文字色を任意の色にする */
 }
 
+div#pagebody {
+	background-color:#ffffff;		/*内容全体の背景色*/
+}
+
 /*============================================
 メインメニュー
 ============================================*/
