--- a/base.css
+++ b/base.css
@@ -1,14 +1,15 @@
 @charset "utf-8";
 body {
-      background-color:#cccccc;		/*ページ全体の背景色*/
-      font-size:95%;                            /* フォントサイズを95%にする */
+      background-color:#cccccc;		      /*ページ全体の背景色*/
+      font-size:95%;                             /* フォントサイズを95%にする */
       font-family: /*"Yu Gothic Medium",*/ "Yu Gothic", "游ゴシック Medium", YuGothic, "游ゴシック体", "ヒラギノ角ゴ Pro W3", "メイリオ", sans-serif;    /* フォントをゴシック系にする */
-      line-height:1.5;                         /* 行の高さを1.5倍にする */
-      color:#2b2b31;                          /* 文字色を任意の色にする */
+      line-height:1.5;                           /* 行の高さを1.5倍にする */
+      color:#2b2b31;                           /* 文字色を任意の色にする */
 }
 
 div#pagebody {
-	background-color:#ffffff;		/*内容全体の背景色*/
+      width:1000px; margin:0 auto;	       /*内容全体をセンタリング*/
+	background-color:#ffffff;	      /*内容全体の背景色*/
 }
 
 /*============================================
@@ -25,13 +26,13 @@ ul#menu {
 }
 
 #menu li a {
-      background-color:rgb(66, 66, 66);	/*背景色*/
-	color:#c7c7c7;		/*文字色*/
-	display:block;			/*リンク部分をブロック表示にする*/
-	width:240px; height:35px;	/*幅と高さ*/
-      padding:15px 0px 0px 0px;	/*上パディング*/
-	text-align:center;		/*テキストをセンター揃えにする*/
-	text-decoration:none;		/*リンク部分を下線無しにする*/
+      background-color:rgb(66, 66, 66);       /*背景色*/
+	color:#c7c7c7;                          /*文字色*/
+	display:block;                            /*リンク部分をブロック表示にする*/
+	width:240px; height:35px;                 /*幅と高さ*/
+      padding:15px 0px 0px 0px;                 /*上パディング*/
+	text-align:center;                        /*テキストをセンター揃えにする*/
+	text-decoration:none;                     /*リンク部分を下線無しにする*/
 }
 
 #menu li a:hover {
