--- a/base.css
+++ b/base.css
@@ -1,4 +1,12 @@
 @charset "utf-8";
+
+/*============================================
+全般的なスタイル
+============================================*/
+* {
+	margin:0; padding:0; 		/*全要素のマージン・パディングをリセット*/
+}
+
 body {
       background-color:#cccccc;		      /*ページ全体の背景色*/
       font-size:95%;                             /* フォントサイズを95%にする */
