--- a/base.css
+++ b/base.css
@@ -49,6 +49,11 @@ ul#menu {
       float:left;			/*リスト項目を横に並べる*/
 }
 
+#menu li +li{
+      border-left: 1px solid #444444;  /* ここがボーダー線指定しているところ */
+      padding: 0 10px 0 10px;         /* メニューとボーダー線の間の距離感 */
+  }
+
 #menu li a {
       background-color:rgb(66, 66, 66);       /*背景色*/
 	color:#c7c7c7;                          /*文字色*/
