--- a/base.css
+++ b/base.css
@@ -67,3 +67,11 @@ ul#menu {
 #menu li a:hover {
 	background-color:#383838; 	/*リンクにマウスが乗ったら背景色を変更する*/
 }
+
+/*============================================
+ヘッダ画像
+============================================*/
+#img_index {
+	width:960px; height:540px;	/*トップページのヘッダ画像の表示サイズを指定*/
+	margin:5px 20px;		/*マージン*/
+}
