--- a/base.css
+++ b/base.css
@@ -100,3 +100,10 @@ div#info {
 hr {
 	clear:both;			/*フロート配置をクリアする*/
 }
+
+/*============================================
+フッタ
+============================================*/
+div#footer {
+	clear:both;			/*回り込みを解除する*/
+}
