--- a/base.css
+++ b/base.css
@@ -88,6 +88,7 @@ div#submenu {
 div#submenu ul li {
 	list-style-type:none;			/*リストマーカー無しにする*/
 }
+
 div#submenu ul li a {
 	display:block;			      /*リンク部分をブロック表示にする*/
 	height:45px;			      /*高さを45pxにする*/
@@ -99,6 +100,9 @@ div#submenu ul li a {
 	color:#333333;                      /*文字色*/
 }
 
+div#submenu ul li:first-child a {
+	border-top:1px dotted gray;		/*一番上のリンクに上線を表示*/
+}
 
 /*============================================
 インフォメーション（右カラム）
