--- a/base.css
+++ b/base.css
@@ -22,6 +22,12 @@ div#pagebody {
 
 img {border:0;} 				/*画像のボーダーを0にする*/
 
+p {
+	width:660px;		/*幅の指定*/
+	margin:10px;		/*マージン*/
+	text-indent:1em;		/*インデント幅*/
+}
+
 /*============================================
 ヘッダ
 ============================================*/
