table border rm

--- a/table.css
+++ b/table.css
@@ -5,6 +5,7 @@
 ============================================*/
 table.profile {
 	width:680px;				/*テーブル全体の幅*/
+    /*border-collapse:collapse;		セル同士の間に隙間を空けない*/
 }
 table.profile th {
 	width:150px;				/*見出しセルの幅*/
@@ -12,10 +13,10 @@ table.profile th {
 	text-align:center;				/*センター揃えにする*/
 	white-space:nowrap;				/*セル内の改行を禁止する*/
 	background-color:#8d8d8d;			/*セルの背景色*/
-	border-bottom:dotted #cccccc 1px;		/*セルのボーダー*/
+	/*border-bottom:dotted #cccccc 1px;		セルのボーダー*/
 }
 table.profile td {
 	padding:10px;				/*パディング*/
 	background-color:#eeeeff;			/*セルの背景色*/
-	border-bottom:dotted #cccccc 1px;		/*セルのボーダー*/
+	/*border-bottom:dotted #cccccc 1px;		セルのボーダー*/
 }
