--- a/base.css
+++ b/base.css
@@ -122,14 +122,14 @@ div#submenu ul li a {
 	height:45px;			      /*高さを45pxにする*/
 	padding:15px 0px 0px 20px;    	/*パディング*/
 	text-decoration:none;		      /*リンクの下線を無くす*/
-	border-bottom:1px dotted gray;      /*リンク領域の下部にボーダーを付ける*/
+	/*border-bottom:1px dotted gray;      リンク領域の下部にボーダーを付ける*/
 	background-image:url(images/bg_submenu.png);	/*リンク領域に背景画像を付ける*/
 	background-repeat:no-repeat;  	/*背景画像を繰り返さない*/
 	color:#333333;                      /*文字色*/
 }
 
 div#submenu ul li:first-child a {
-	border-top:1px dotted gray;		/*一番上のリンクに上線を表示*/
+	/*border-top:1px dotted gray;		一番上のリンクに上線を表示*/
 }
 
 div#submenu ul li a:hover	{
