--- a/base.css
+++ b/base.css
@@ -161,10 +161,17 @@ h3 {
 }
 
 .infoimg_index {
-	width:200px; height:150px;	/*画像の表示サイズを指定*/
+	width:200px; height:133px;	/*画像の表示サイズを指定*/
 	margin:0px 0px 20px 20px;	/*マージン*/
 	float:right;			/*画像を右寄せにする*/
 }
+
+.infoimg_gallery {
+	width:600px; height:400px;	/*画像の表示サイズを指定*/
+	margin:0px 0px 20px 20px;	/*マージン*/
+	float:right;			/*画像を右寄せにする*/
+}
+
 hr {
 	clear:both;			/*フロート配置をクリアする*/
 }
