--- a/base.css
+++ b/base.css
@@ -85,7 +85,7 @@ ul#menu {
 ヘッダ画像
 ============================================*/
 #img_index {
-	width:960px; height:640px;	/*トップページのヘッダ画像の表示サイズを指定*/
+	width:960px; height:6\40px;	/*トップページのヘッダ画像の表示サイズを指定*/
 	margin:5px 20px;		/*マージン*/
 }
 
