--- a/base.css
+++ b/base.css
@@ -161,7 +161,7 @@ h3 {
 }
 
 .infoimg_index {
-	width:200px; height:133px;	/*画像の表示サイズを指定*/
+	width:200px; height:133px;	/*画像の表\示サイズを指定*/
 	margin:0px 0px 20px 20px;	/*マージン*/
 	float:right;			/*画像を右寄せにする*/
 }
