--- a/base.css
+++ b/base.css
@@ -35,6 +35,10 @@ hr {
 	border:1px dotted #cccccc;	/*内容の区切りをグレーの点線表示にする*/
 }
 
+span {
+    color: #cccccc;
+}
+
 /*============================================
 ヘッダ
 ============================================*/
