--- a/base.css
+++ b/base.css
@@ -146,7 +146,7 @@ div#submenu ul li a:before {
 /*============================================
 インフォメーション（中カラムver）
 ============================================*/
-div#info {
+div#info_c {
 	width:960px;		/*幅の指定*/
 	float:left;			/*カラムを左寄せにする*/
       padding:0px 0px 0px 0px;		/*パディング*/
@@ -183,6 +183,12 @@ hr {
 /*============================================
 インフォメーション（右カラムver）
 ============================================*/
+div#info {
+	width:960px;		/*幅の指定*/
+	float:left;			/*カラムを左寄せにする*/
+      padding:0px 0px 0px 0px;		/*パディング*/
+}
+
 h4 {
 	font-size:14px;			/*文字サイズ*/
 	width:730px;			/*横幅*/
