--- a/base.css
+++ b/base.css
@@ -66,7 +66,7 @@ ul#menu {
 /*  }*/
 
 #menu li a {
-    background-color:rgb(66, 66, 66);       /*背景色*/
+    background-color:rgb(0, 0, 0);       /*背景色*/
 	color:#c7c7c7;                          /*文字色*/
 	display:block;                            /*リンク部分をブロック表示にする*/
 	width:300px; height:35px;                 /*幅と高さ*/
@@ -101,7 +101,7 @@ h2 {
 	font-size:15px;			/*フォントサイズ*/
 	/*background-image:url(images/bg_h2.png);	背景画像*/
 	/*background-repeat:no-repeat;		背景画像を繰り返さない*/
-	background-color:rgb(66, 66, 66);		/*背景色*/
+	background-color:rgb(0, 0, 0);		/*背景色*/
 	color:#c7c7c7;			/*文字色*/
 	border-radius:5px;			/*角丸にする*/
 }
@@ -154,7 +154,7 @@ h3 {
 	font-size:14px;			/*文字サイズ*/
 	width:730px;			/*横幅*/
 	padding:10px 0px 10px 0px;		/*パディング*/
-	background-color:rgb(66, 66, 66);		/*背景色*/
+	background-color:rgb(0, 0, 0);		/*背景色*/
 	color:#c7c7c7;			/*文字色*/
 	border-radius:5px;			/*角丸にする*/
 	margin:0px 0px 9px 220px;
@@ -164,7 +164,7 @@ h3 {
 	width:200px; height:133px;	/*画像の表\示サイズを指定*/
 	margin:0px 20px 20px 0px;	/*マージン*/
 	float:left;			/*画像を寄せる*/
-	filter: drop-shadow(2px 5px 4px #6b6b6b);
+	/*filter: drop-shadow(2px 5px 4px #6b6b6b);*/
 }
 
 .infoimg_gallery {
