--- a/table.css
+++ b/table.css
@@ -12,11 +12,11 @@ table.profile th {
 	padding:10px;				/*パディング*/
 	text-align:center;				/*センター揃えにする*/
 	white-space:nowrap;				/*セル内の改行を禁止する*/
-	background-color:#8d8d8d;			/*セルの背景色*/
+	background-color:#444444;			/*セルの背景色*/
 	/*border-bottom:dotted #cccccc 1px;		セルのボーダー*/
 }
 table.profile td {
 	padding:10px;				/*パディング*/
-	background-color:#eeeeff;			/*セルの背景色*/
+	background-color:#444444;			/*セルの背景色*/
 	/*border-bottom:dotted #cccccc 1px;		セルのボーダー*/
 }
