--- a/base.css
+++ b/base.css
@@ -174,6 +174,13 @@ h3 {
 	float:left;			/*画像を右寄せにする*/
 }
 
+.infoimg_gallery_vertical {
+	width:730px; height:1096px;	/*画像の表示サイズを指定*/
+	padding:20px 0px 10px 5px;		/*パディング*/
+	margin:-10px;	/*マージン*/
+	float:left;			/*画像を右寄せにする*/
+}
+
 hr {
 	clear:both;			/*フロート配置をクリアする*/
 }
