--- a/stylescopy.css
+++ b/stylescopy.css
@@ -39,7 +39,10 @@ nav ul li a:hover {
 }
 
 main {
+    padding: 20px;
     display: flex;
+    justify-content: center;
+    align-items: center;
     height: calc(100vh - 60px); /* Adjusts for header height */
 }
 
