--- a/styles.css
+++ b/styles.css
@@ -74,13 +74,16 @@ main {
     align-items: center;
     text-decoration: none;
     color: transparent; /* 文字を透明に */
-    transition: background-color 0.3s ease, color 0.3s ease;
-    background-color: rgba(0, 0, 0, 0); /* 背景色を透明に */
+    transition: color 0.5s ease; /* 文字の色のフェードイン */
+    background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0) 100%);
+    background-size: 100% 0%; /* 背景の初期状態 */
+    background-repeat: no-repeat;
+    transition: background-size 0.5s ease; /* 背景のサイズのアニメーション */
 }
 
 .overlay:hover {
-    background-color: rgba(255, 255, 255, 0.3); /* 背景を白く薄く */
-    color: #000; /* 文字を黒に */
+    background-size: 100% 100%; /* 背景が全体に広がる */
+    color: #000; /* 文字が黒くなる */
 }
 
 .text {
