--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@
 }
 
 body {
-    font-family: "游明朝", "Yu Mincho", serif;
+    font-family: "游ゴシック Light","游ゴシック","Yu Gothic"; font-weight: 200;
     background-color: #000;
     color: #fff;
     height: 100vh;
