--- a/styles.css
+++ b/styles.css
@@ -219,7 +219,7 @@ footer {
         transform: scale(1.05);
     }
 
-    nav ul {
+    .nav-menu {
         display: none; /* 初期状態ではメニューを非表示 */
         flex-direction: column;
         align-items: center;
@@ -232,15 +232,15 @@ footer {
         padding: 10px 0;
     }
 
-    nav ul.active {
+    .nav-menu.active {
         display: flex; /* メニューがアクティブ状態のときに表示 */
     }
 
-    nav ul li {
+    .nav-menu li {
         margin: 10px 0;
     }
 
-    nav ul li a {
+    .nav-menu li a {
         color: #fff;
         text-decoration: none;
         font-size: 18px;
@@ -249,7 +249,7 @@ footer {
         transition: background-color 0.3s;
     }
 
-    nav ul li a:hover {
+    .nav-menu li a:hover {
         background-color: #333;
     }
 
