--- a/styles.css
+++ b/styles.css
@@ -47,16 +47,15 @@ main {
 /* Logo in the header */
 .logo {
     height: auto; /* Maintain the aspect ratio */
-    max-height: 30px; /* Adjust the maximum height to fit within the header */
+    max-height: 23px; /* Adjust the maximum height to fit within the header */
     width: auto; /* Maintain the aspect ratio */
-    vertical-align: middle;
+    vertical-align: top;
 }
 
 /* Adjusted spacing and alignment for header elements */
 nav ul {
     list-style-type: none;
     display: flex;
-    justify-content: flex-start; /* Align items to the left */
     align-items: center; /* Vertically align items in the middle */
     padding-left: 10px; /* Add padding to create some space on the left */
 }
