--- a/styles.css
+++ b/styles.css
@@ -185,11 +185,13 @@ header {
 
 /* Event list styles (right side) */
 .event-list {
+    font-family: 'Avenir Next',sans-serif;
     width: 35%;
     padding-left: 20px;
 }
 
 .event-list h2 {
+    font-family: 'Avenir Next',sans-serif;
     font-size: 24px;
     margin-bottom: 10px;
 }
