--- a/styles.css
+++ b/styles.css
@@ -188,12 +188,14 @@ header {
     font-family: 'Avenir Next',sans-serif;
     width: 35%;
     padding-left: 20px;
+    font-weight: 200;
 }
 
 .event-list h2 {
     font-family: 'Avenir Next',sans-serif;
     font-size: 24px;
     margin-bottom: 10px;
+    font-weight: 200;
 }
 
 .event-list ul {
@@ -203,6 +205,7 @@ header {
 
 .event-list li {
     margin-bottom: 10px;
+    font-weight: 200;
 }
 
 .event-list li a {
@@ -210,6 +213,7 @@ header {
     text-decoration: none;
     font-size: 18px;
     transition: color 0.3s ease;
+    font-weight: 200;
 }
 
 .event-list li a:hover {
