--- a/styles.css
+++ b/styles.css
@@ -54,6 +54,23 @@ main {
     max-height: 23px; /* Adjust the maximum height to fit within the header */
     width: auto; /* Maintain the aspect ratio */
     vertical-align: top;
+    transition: opacity 0.3s ease;
+}
+
+.logo-hover {
+    display: none;
+    height: auto; /* Maintain the aspect ratio */
+    max-height: 23px; /* Adjust the maximum height to fit within the header */
+    width: auto; /* Maintain the aspect ratio */
+    vertical-align: top;
+}
+
+nav ul li:hover .logo {
+    display: none;
+}
+
+nav ul li:hover .logo-hover {
+    display: inline;
 }
 
 /* Mobile Menu Styles */
