--- a/styles.css
+++ b/styles.css
@@ -459,23 +459,30 @@ a {
 }
 
 .profile-section {
-    text-align: center;
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
     padding: 50px 20px;
+    height: 100%;
 }
 
 .profile-section h1 {
     font-size: 36px;
     font-weight: 300;
-    margin-bottom: 20px;
+    text-align: left;
+    flex: 1;
+    margin-right: 20px; /* 右側との間隔を確保 */
 }
 
 .profile-list {
+    flex: 2;
     list-style: none;
     padding: 0;
     font-size: 18px;
     line-height: 1.8;
     font-weight: 200;
     color: #ccc;
+    text-align: left; /* 左揃え */
 }
 
 .profile-list li {
