--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@
 }
 
 body {
-    font-family: 'Avenir Next', sans-serif;
+    font-family: 'Avenir Next','Yu Gothic', sans-serif;
     background-color: #000;
     color: #fff;
     height: 100vh;
@@ -460,22 +460,33 @@ a {
 
 .profile-section {
     display: flex;
-    justify-content: space-between;
-    align-items: flex-start;
-    padding: 50px 20px;
+    flex-wrap: wrap;
+    justify-content: space-between; /* セクションを水平中央揃え */
+    align-items: flex-start; /* セクション内で垂直方向を中央揃え */
+    padding: 10px 20px;
     height: 100%;
 }
 
 .profile-section h1 {
     font-size: 36px;
     font-weight: 300;
-    text-align: left;
-    flex: 1;
-    margin-right: 20px; /* 右側との間隔を確保 */
+    text-align: center;
+    margin-right: 40px; /* "profile-list" との間隔を確保 */
+    margin-left: 40px;
+}
+
+.profile-list-about {
+    list-style: none;
+    padding: 0;
+    font-size: 36px;
+    line-height: 1.8;
+    font-weight: 200;
+    color: #ccc;
+    text-align: center; /* 左揃え */
+    margin: 15px;
 }
 
 .profile-list {
-    flex: 2;
     list-style: none;
     padding: 0;
     font-size: 18px;
@@ -483,9 +494,26 @@ a {
     font-weight: 200;
     color: #ccc;
     text-align: left; /* 左揃え */
+    margin: 15px;
+}
+
+.profile-list-sns {
+    list-style: none;
+    padding: 0;
+    font-size: 18px;
+    line-height: 1.8;
+    font-weight: 200;
+    color: #ccc;
+    text-align: center;
+    margin: 15px;
 }
 
 .profile-list li {
+    margin: 10px 0;
+    transition: color 0.3s ease;
+}
+
+profile-list-sns li {
     margin: 10px 0;
     transition: color 0.3s ease;
 }
